# carbs

./: #gitignore#  .#bootstrap.sh  .ansible-lint  .bashrc.un~  .bumpversion.toml  .editorconfig  .envrc  .gitconfig  .gitignore  .gitignore.un~  .gitmodules  .hgrc.un~  .install.sh.un~  .install.un~  .luarc.json  .pre-commit-config.yaml  .readme.md.un~  .secrets.baseline  CLAUDE.md  Makefile  README.md  README.org  SESSION_NOTES_SCALING_FIX.md  aliases  ansible.cfg  archbuild.sh  bash_aliases  bashrc  bootstrap.sh  changelog.org  config  docker.alias  docker_aliases  dvcs  gitconfig  gitignore  hgrc  i3_config  install  install.sh  (+13 more)
alias.d/: common.alias  docker.alias  python3.alias
ansible/: aero.yml  carbs.yml  desktop.yml  hosts  impi.yml  localhost.yml  play.sh  site.yml  syu.yml  tablet.yml  tablets.yml  tv.yml  twinks.yml  vive.yml  wsl.yml
apps/: netbeans.conf  pycharm.sh
attic/: README.md  gitconfig  install  notes.md  source_code_pro_install.sh  tmux.conf
bash/: bashrc
bootstrap/: yay.sh
config/: README.org  starship.toml
dev/: dev-cache.yml
dotfiles/: .zshrc  README.org  dot-gitconfig  dot-zprofile  dot-zshenv  dot-zshrc
eclipse/: eclipse.ini
git/: .gitconfig
i3/: .gitignore  bosvlieg-config  config  folly-config  folly-status  status  thysxps-config  workdell-config  xps-config  xps-status
lib/: lib.sh
mac/: vimrc
notes/: avassa-cli.org  wayland-primary-selection.md
profile/: .profile
scripts/: README.md  avi2mp4  browse-arch-packages  clipboarder  clipboarder.sh  fixnvidia  fixnvidia.sh  hotplug_monitor.sh  i3dropdownspawn.sh  myip  (+11 more)
(+507 files in other folders)
