[tool.poetry]
name = "ansible-carbs"
version = "0.3.0"
description = "Provision daily driver"
authors = ["Thys Meintjes"]
readme = "README.org"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
ansible = ">=6.5.0"
pre-commit = ">=2.20.0"
ansible-lint = ">=6.8.2"
neovim = ">=0.3.1"
detect-secrets = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
