[project]
name = "carbs"
version = "0.3.0"
description = "Provision daily driver"
readme = "README.org"
requires-python = ">=3.11"
authors = [
    { name = "Thys Meintjes" }
]
dependencies = [
    "ansible >=6.5.0",
    "pre-commit >=2.20.0",
    "ansible-lint >=6.8.2",
    "neovim >=0.3.1",
    "detect-secrets >=1.4.0",
    "ansible-cmdb>=1.31",
]
